CGIV-7394 added a max height and overflow to the image to prevent long images from encroaching on other rows

--- a/public/channelgrabber/orders/scss/_orders.scss
+++ b/public/channelgrabber/orders/scss/_orders.scss
@@ -181,6 +181,8 @@
                 }
                 .order-row-img {
                     max-width: 39px;
+                    max-height: 43px;
+                    overflow: hidden;
                     margin-right: 19px;
                     img {
                         width: 100%;
